# wasm_test

./: .gitignore  Cargo.toml  LICENSE  package.json
.github/workflows/: deploy.yml
shaders/: cylinder.wgsl  sphere.wgsl
src/: lib.rs
web/: index.html  main.js  styles.css  webgpu-renderer.js
web/shaders/: fragment.wgsl  vertex.wgsl
